Show app version in debug, use commit count for version code

--- a/debug/src/main/res/layout/fragment_debug.xml
+++ b/debug/src/main/res/layout/fragment_debug.xml
@@ -156,6 +156,28 @@
                 android:text="?"
                 app:fontFamily="monospace"
                 style="@style/TextAppearance.MaterialComponents.Body2"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Other"
+                style="@style/TextAppearance.MaterialComponents.Headline6" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="App Version"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>
+
+            <TextView
+                android:id="@+id/txtAppVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="?"
+                app:fontFamily="monospace"
+                style="@style/TextAppearance.MaterialComponents.Body2"/>
         </LinearLayout>
 
     </ScrollView>
