--- a/musicdao/src/main/res/layout/music_app_main.xml
+++ b/musicdao/src/main/res/layout/music_app_main.xml
@@ -52,19 +52,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <ProgressBar
-            android:id="@+id/progressBar2"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <ImageButton
-            android:id="@+id/playButton"
+            android:id="@+id/playButtonAudioPlayer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
