--- a/musicdao/src/main/res/navigation/musicdao_navgraph.xml
+++ b/musicdao/src/main/res/navigation/musicdao_navgraph.xml
@@ -7,6 +7,6 @@
 
     <fragment
         android:id="@+id/blankFragment"
-        android:name="com.example.musicdao.BlankFragment"
+        android:name="com.example.musicdao.MainFragment"
         android:label="fragment_blank" />
 </navigation>
