--- a/debug/src/main/res/navigation/nav_graph_debug.xml
+++ b/debug/src/main/res/navigation/nav_graph_debug.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_graph"
+    android:label="NAT Puncturing"
     app:startDestination="@id/debugFragment">
 
     <fragment
         android:id="@+id/debugFragment"
         android:name="nl.tudelft.trustchain.debug.DebugFragment"
-        android:label="Debug" >
+        android:label="Debug">
         <action
             android:id="@+id/action_debugFragment_to_wanLogFragment"
             app:destination="@id/wanLogFragment" />
@@ -21,5 +23,5 @@
     <fragment
         android:id="@+id/punctureFragment"
         android:name="nl.tudelft.trustchain.debug.PunctureFragment"
-        android:label="PunctureFragment" />
+        android:label="NAT Puncturing" />
 </navigation>
