--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="text_primary">#000000</color>
+    <color name="text_secondary">#666666</color>
+    <color name="text_tertiary">#AAAAAA</color>
     <color name="blue">#2962FF</color>
     <color name="green">#558B2F</color>
     <color name="android_green">#3DDB86</color>
