--- a/peerchat/src/main/res/layout/fragment_add_contact.xml
+++ b/peerchat/src/main/res/layout/fragment_add_contact.xml
@@ -70,7 +70,7 @@
                 android:textSize="14sp"
                 android:textColor="@color/text_primary"
                 android:textColorHint="@color/text_tertiary"
-                android:inputType="textPersonName"
+                android:inputType="textPersonName|textCapWords"
                 app:layout_constraintTop_toBottomOf="@id/txtDescription"
                 android:hint="Enter a name..."
                 tools:text="Matt" />
