--- a/peerchat/src/main/res/layout/fragment_contacts.xml
+++ b/peerchat/src/main/res/layout/fragment_contacts.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/connectivityStatus" />
 
     <LinearLayout
         android:id="@+id/imgEmpty"
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="@id/recyclerView">
 
         <ImageView
             android:layout_width="100dp"
@@ -43,13 +43,66 @@
             android:text="Start by adding\nyour first contact" />
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/connectivityStatus"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:background="@color/light_gray"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <FrameLayout
+            android:id="@+id/btnInternetContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnBluetoothContainer">
+
+            <TextView
+                android:id="@+id/btnInternet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/text_secondary"
+                android:drawablePadding="8dp"
+                android:gravity="center"
+                android:drawableStart="@drawable/ic_wifi_black_24dp"
+                android:text="Internet" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/btnBluetoothContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/btnInternetContainer"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/btnBluetooth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawablePadding="8dp"
+                android:textColor="@color/text_secondary"
+                android:gravity="center"
+                android:drawableStart="@drawable/ic_bluetooth_black_24dp"
+                android:text="Bluetooth" />
+        </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         fab:fab_labelStyle="@style/MenuLabelStyle"
-        app:layout_constraintBottom_toBottomOf="parent"
+        fab:fab_addButtonColorNormal="@color/purple"
+        fab:fab_addButtonColorPressed="@color/purple"
+        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
@@ -57,14 +110,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_title="Add remote contact"
-            fab:fab_icon="@drawable/ic_link_white_24dp"/>
+            fab:fab_icon="@drawable/ic_link_white_24dp"
+            fab:fab_colorNormal="@color/purple"
+            fab:fab_colorPressed="@color/purple" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/btnAddNearby"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_title="Add nearby contact"
-            fab:fab_icon="@drawable/ic_photo_camera_white_24dp"/>
+            fab:fab_icon="@drawable/ic_photo_camera_white_24dp"
+            fab:fab_colorNormal="@color/purple"
+            fab:fab_colorPressed="@color/purple" />
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </androidx.constraintlayout.widget.ConstraintLayout>
