--- a/peerchat/src/main/res/values/styles.xml
+++ b/peerchat/src/main/res/values/styles.xml
@@ -2,7 +2,10 @@
 <resources>
     <style name="Theme" />
 
-    <style name="Theme.PeerChat" parent="Theme.MaterialComponents.Light.DarkActionBar" />
+    <style name="Theme.PeerChat" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    </style>
 
     <style name="MenuLabelStyle">
         <item name="android:textColor">@color/text_primary</item>
@@ -11,7 +14,6 @@
 
     <style name="Button" parent="Widget.MaterialComponents.Button">
         <item name="shapeAppearanceOverlay">@style/ButtonAppearance</item>
-        <item name="colorControlNormal">@color/purple</item>
         <item name="android:textColor">@color/white</item>
         <item name="textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
