--- a/musicdao/src/main/res/layout/fragment_release.xml
+++ b/musicdao/src/main/res/layout/fragment_release.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textStyle=""
+            android:textColor="@color/white"
             android:layout_span="4"/>
     </TableRow>
 
