--- a/musicdao/src/main/res/layout/music_app_main.xml
+++ b/musicdao/src/main/res/layout/music_app_main.xml
@@ -30,20 +30,25 @@
             android:text="Send proposal block"
             android:visibility="gone" />
 
-        <Button
-            android:id="@+id/torrentButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Load example"
-            android:visibility="visible" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/shareTrackButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Share track"
-            android:visibility="visible"
-            tools:visibility="visible" />
+            <Button
+                android:id="@+id/torrentButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Load example"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/shareTrackButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share track"
+                android:visibility="visible"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
