--- a/peerchat/src/main/res/layout/item_message.xml
+++ b/peerchat/src/main/res/layout/item_message.xml
@@ -17,20 +17,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txtMessage"
+    <FrameLayout
+        android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="50dp"
-        android:background="@drawable/bg_message"
-        android:textColor="@color/text_primary"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Lorem Ipsum" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/txtMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="50dp"
+            android:background="@drawable/bg_message"
+            android:textColor="@color/text_primary"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            tools:text="Lorem Ipsum" />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="200dp"
+            android:layout_height="200dp" />
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/bottomContainer"
@@ -40,8 +57,8 @@
         android:gravity="center"
         android:paddingTop="2dp"
         android:paddingBottom="4dp"
-        app:layout_constraintTop_toBottomOf="@id/txtMessage"
-        app:layout_constraintStart_toStartOf="@id/txtMessage">
+        app:layout_constraintTop_toBottomOf="@id/content"
+        app:layout_constraintStart_toStartOf="@id/content">
 
         <ImageView
             android:id="@+id/imgDelivered"
