Re-implement torrentstream-android, implement ExoPlayer, implement release overview and routing, implement persistent local database of releases

--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:flexWrap="wrap"
-    android:background="@color/colorPrimaryPlayer">
+    android:background="@color/colorPrimaryPlayer"
+    android:orientation="vertical"
+    android:paddingHorizontal="@dimen/fab_margin">
 
-    <fragment
-        android:id="@+id/release_cover_fragment1"
-        class="com.example.musicdao.ReleaseCoverFragment"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="@dimen/fab_margin" />
+    <TextView
+        android:id="@+id/torrentClientInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/white" />
 
-    <fragment
-        android:id="@+id/release_cover_fragment2"
-        class="com.example.musicdao.ReleaseCoverFragment"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="@dimen/fab_margin" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <fragment
-        android:id="@+id/release_cover_fragment3"
-        class="com.example.musicdao.ReleaseCoverFragment"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="@dimen/fab_margin" />
+        <Button
+            android:id="@+id/torrentButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Load example"
+            android:visibility="visible" />
 
-</com.google.android.flexbox.FlexboxLayout>
+        <Button
+            android:id="@+id/shareTrackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Share track"
+            android:visibility="visible" />
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/release_overview_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:flexWrap="wrap">
+
+        </com.google.android.flexbox.FlexboxLayout>
+    </ScrollView>
+
+</LinearLayout>
