--- a/musicdao/src/main/res/layout/fragment_trackplaying.xml
+++ b/musicdao/src/main/res/layout/fragment_trackplaying.xml
@@ -5,7 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="true"
+    android:background="@color/black"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_margin="4dp"
+        android:textColor="@color/white"
+        android:id="@+id/trackInfo"
+        android:text=""/>
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerView"
@@ -14,7 +24,7 @@
         app:auto_show="true"
         app:show_timeout="0"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         app:show_buffering="always" />
 
 <!--    <LinearLayout-->
