--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -7,43 +7,64 @@
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/fab_margin">
 
-    <TextView
-        android:id="@+id/torrentClientInfo"
+<!--    <TextView-->
+<!--        android:id="@+id/torrentClientInfo"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="TextView"-->
+<!--        android:textColor="@color/white" />-->
+
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content">-->
+
+    <!--        <Button-->
+    <!--            android:id="@+id/torrentButton"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="Load example"-->
+    <!--            android:visibility="visible" />-->
+
+    <!--        <Button-->
+    <!--            android:id="@+id/shareTrackButton"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="Share track"-->
+    <!--            android:visibility="visible" />-->
+    <!--    </LinearLayout>-->
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="@color/white" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/torrentButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Load example"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/shareTrackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Share track"
-            android:visibility="visible" />
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/release_overview_layout"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:flexWrap="wrap">
+            android:layout_height="wrap_content">
 
-        </com.google.android.flexbox.FlexboxLayout>
-    </ScrollView>
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/release_overview_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:flexWrap="wrap">
+
+            </com.google.android.flexbox.FlexboxLayout>
+        </ScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addPlaylistFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="end|bottom"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/add_playlist"
+            android:elevation="10dp"
+            android:src="@drawable/ic_baseline_add_24"
+            app:rippleColor="@color/white" />
+    </RelativeLayout>
+
 
 </LinearLayout>
