--- a/peerchat/src/main/res/layout/fragment_contacts.xml
+++ b/peerchat/src/main/res/layout/fragment_contacts.xml
@@ -10,8 +10,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/connectivityStatus" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connectivityStatus" />
 
     <LinearLayout
         android:id="@+id/imgEmpty"
@@ -21,7 +21,7 @@
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/recyclerView"
         app:layout_constraintBottom_toBottomOf="@id/recyclerView">
 
         <ImageView
@@ -49,7 +49,7 @@
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:background="@color/light_gray"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:id="@+id/btnInternetContainer"
