Fix playing from local files, improve seeding and do not play immediately the first track without selecting it

--- a/musicdao/src/main/res/navigation/musicdao_navgraph.xml
+++ b/musicdao/src/main/res/navigation/musicdao_navgraph.xml
@@ -28,6 +28,10 @@
             <argument
                 android:name="date"
                 app:argType="string" />
+            <argument
+                android:name="torrentInfoName"
+                app:argType="string"
+                />
         </action>
     </fragment>
 
