--- a/musicdao/src/main/res/layout/fragment_playlist.xml
+++ b/musicdao/src/main/res/layout/fragment_playlist.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingHorizontal="@dimen/fab_margin">
+        android:paddingHorizontal="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
