--- a/musicdao/src/main/res/layout/fragment_playlist.xml
+++ b/musicdao/src/main/res/layout/fragment_playlist.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingHorizontal="4dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
