Revert common module change

--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/blue</color>
     <color name="colorPrimaryDark">#0D47A1</color>
-    <color name="musicColorAccent">#D81B60</color>
+    <color name="colorAccent">#D81B60</color>
 
     <color name="text_primary">#000000</color>
     <color name="text_secondary">#666666</color>
