--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -37,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ScrollView
+            android:id="@+id/release_overview_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
